[gd_scene load_steps=11 format=3 uid="uid://bqlgq52chuge6"]

[ext_resource type="Theme" uid="uid://baa3ykptg6tmu" path="res://settings/application_view_theme.tres" id="1_v1b6g"]
[ext_resource type="Script" uid="uid://dxa5fsxrd2a50" path="res://scenes/interactive/computer/view/prefab/application_view.gd" id="2_77npm"]
[ext_resource type="Texture2D" uid="uid://7nw8qv27uppu" path="res://textures/computer/backgrounds/application_background_ninepatch.png" id="3_frrxt"]
[ext_resource type="Texture2D" uid="uid://4puwmh7vfnsf" path="res://textures/symbols/minimize.png" id="3_u5d5b"]
[ext_resource type="Texture2D" uid="uid://b1bc6esjs5fse" path="res://textures/symbols/maximize.png" id="4_q0dke"]
[ext_resource type="Texture2D" uid="uid://bmif84bbjv732" path="res://textures/symbols/close.png" id="5_frrxt"]
[ext_resource type="Texture2D" uid="uid://bqipgmisl7jca" path="res://textures/symbols/resize.png" id="6_q0dke"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3apw"]
bg_color = Color(0.784314, 0.0392157, 0.0392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1wiys"]
bg_color = Color(0.980392, 0.0392157, 0.0392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ynela"]
bg_color = Color(0.588235, 0.0392157, 0.0392157, 1)

[node name="ApplicationView" type="Control"]
custom_minimum_size = Vector2(450, 300)
layout_mode = 3
anchor_right = 0.234
anchor_bottom = 0.278
offset_right = -149.28
offset_bottom = -100.24
theme = ExtResource("1_v1b6g")
script = ExtResource("2_77npm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("3_frrxt")
patch_margin_left = 16
patch_margin_top = 32
patch_margin_right = 16
patch_margin_bottom = 24

[node name="Application" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/Application"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
mouse_default_cursor_shape = 13

[node name="Icon" type="TextureRect" parent="MarginContainer/Application/TopBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
expand_mode = 4
stretch_mode = 3

[node name="ApplicationName" type="Label" parent="MarginContainer/Application/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "APPLICATION_NAME"
vertical_alignment = 1
clip_text = true

[node name="MinimizeButton" type="Button" parent="MarginContainer/Application/TopBar"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
icon = ExtResource("3_u5d5b")
expand_icon = true

[node name="MaximizeButton" type="Button" parent="MarginContainer/Application/TopBar"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
icon = ExtResource("4_q0dke")
expand_icon = true

[node name="CloseButton" type="Button" parent="MarginContainer/Application/TopBar"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_t3apw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1wiys")
theme_override_styles/normal = SubResource("StyleBoxFlat_ynela")
icon = ExtResource("5_frrxt")
expand_icon = true

[node name="Content" type="Control" parent="MarginContainer/Application"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer/Application"]
layout_mode = 2
alignment = 2

[node name="ResizeButton" type="Button" parent="MarginContainer/Application/BottomBar"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 12
icon = ExtResource("6_q0dke")
flat = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/Application/TopBar" to="." method="_on_top_bar_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Application/TopBar" to="." method="_on_top_bar_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Application/TopBar/MinimizeButton" to="." method="_on_minimize_button_pressed"]
[connection signal="pressed" from="MarginContainer/Application/TopBar/MaximizeButton" to="." method="_on_maximize_button_pressed"]
[connection signal="pressed" from="MarginContainer/Application/TopBar/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="button_down" from="MarginContainer/Application/BottomBar/ResizeButton" to="." method="_on_resize_button_button_down"]
[connection signal="button_up" from="MarginContainer/Application/BottomBar/ResizeButton" to="." method="_on_resize_button_button_up"]
